--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,7 +24,8 @@
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "react-native-webview": "8.1.1",
-    "react-navigation": "^4.3.8"
+    "react-navigation": "^4.3.8",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
